<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlt_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/my_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/normal_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tvInput2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_content">

            <EditText

                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_content"
                android:hint="@string/input_pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/normal_text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/background_login"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#448df4"
                android:gravity="center"
                android:text="Tiếp tục với Google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/register_new"
                android:textAllCaps="false"
                android:textColor="#000" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/padding_content"
                android:layout_marginTop="8dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/tv_lost_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/lostpass"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>